--- a/Pixed/Controls/PaintCanvas.xaml
+++ b/Pixed/Controls/PaintCanvas.xaml
@@ -12,8 +12,8 @@
     </UserControl.DataContext>
     <ScrollViewer 
     x:Name="scrollView"
-    VerticalScrollBarVisibility="Visible" 
-    HorizontalScrollBarVisibility="Visible">
+    VerticalScrollBarVisibility="Auto" 
+    HorizontalScrollBarVisibility="Auto">
         <Grid Name="imageGrid" Width="{Binding GridWidth}" Height="{Binding GridHeight}">
             <Grid.Background>
                 <ImageBrush ImageSource="../Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" Viewport="0,0,32,32" ViewportUnits="Absolute"/>
