--- a/Pixed/Controls/SimpleTooltip.xaml
+++ b/Pixed/Controls/SimpleTooltip.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Pixed.Controls.LayerListControl"
+﻿<UserControl x:Class="Pixed.Controls.SimpleTooltip"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,7 @@
              xmlns:local="clr-namespace:Pixed.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
-        <Border BorderBrush="Gray" BorderThickness="1">
-            <Image Width="32" Height="32" Source="{Binding RenderSource}"/>
-        </Border>
-        <TextBlock Text="{Binding Name}" Foreground="White"/>
+    <StackPanel Background="Black">
+        <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5" Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:SimpleTooltip}}" Foreground="White"></TextBlock>
     </StackPanel>
 </UserControl>
