--- a/Pixed/MainWindow.xaml
+++ b/Pixed/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:Pixed.Controls" 
         xmlns:viewmodels="clr-namespace:Pixed.ViewModels"
         mc:Ignorable="d"
-        Title="Pixed" Height="450" Width="800" Background="#1D1D1D">
+        Title="Pixed" Height="450" Width="800" Background="#1D1D1D" KeyDown="Window_KeyDown">
     <Window.DataContext>
         <viewmodels:MainViewModel/>
     </Window.DataContext>
