--- a/Pixed/MainWindow.xaml
+++ b/Pixed/MainWindow.xaml
@@ -44,7 +44,7 @@
         </ScrollViewer>
         <Grid x:Name="mainSection" Grid.Column="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="124"/>
                 <ColumnDefinition Width="auto"/>
                 <!-- Open/close button-->
                 <ColumnDefinition Width="*"/>
@@ -53,8 +53,34 @@
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <StackPanel x:Name="framesPanel" Width="124">
-                <ListBox ItemsSource="{Binding Frames}" SelectedIndex="{Binding SelectedFrame, Mode=TwoWay}"
-                                       dd:DragDrop.DropTargetAdornerBrush="Coral"
+                <Grid Margin="6, 0, 6, 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32"/>
+                    </Grid.RowDefinitions>
+                    <Button Style="{StaticResource FramesButton}"  Command="{Binding DuplicateFrameCommand}">
+                        <Button.ToolTip>
+                            <ToolTip Background="Black" BorderThickness="0">
+                                <controls:SimpleTooltip Title="Duplicate this frame"/>
+                            </ToolTip>
+                        </Button.ToolTip>
+                        <Image Source="./Resources/icons/frame/frame-duplicate-white.png" Width="32" Height="32"/>
+                    </Button>
+                    <Button Style="{StaticResource FramesButton}" Grid.Column="1" Command="{Binding RemoveFrameCommand}" Visibility="{Binding RemoveFrameVisibility}">
+                        <Button.ToolTip>
+                            <ToolTip Background="Black" BorderThickness="0">
+                                <controls:SimpleTooltip Title="Delete this frame"/>
+                            </ToolTip>
+                        </Button.ToolTip>
+                        <Image Source="./Resources/icons/frame/frame-recyclebin-white.png" Width="32" Height="32"/>
+                    </Button>
+                </Grid>
+                <ListBox ItemsSource="{Binding Frames}" SelectedIndex="{Binding SelectedFrame, Mode=TwoWay}" Width="110"
+                         Background="#1D1D1D"
+                                       dd:DragDrop.DropTargetAdornerBrush="#039BE5"
                                          dd:DragDrop.IsDragSource="True"
                                          dd:DragDrop.IsDropTarget="True"
                                          dd:DragDrop.UseDefaultEffectDataTemplate="True"
@@ -65,6 +91,12 @@
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
+                <Button Style="{StaticResource CreateFrameButton}" Margin="3" Command="{Binding NewFrameCommand}">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <Image Margin="3" Width="26" Height="26" Source="../Resources/Icons/frame/frame-plus-white.png"/>
+                        <TextBlock Text="New frame" FontSize="13" Foreground="White" VerticalAlignment="Center"/>
+                    </StackPanel>
+                </Button>
             </StackPanel>
 
             <Grid Name="centerPanel" Grid.Column="2">
@@ -92,7 +124,7 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="26"/>
                             </Grid.RowDefinitions>
-                            <Button Style="{StaticResource layersButton}" Command="{Binding AddLayerCommand}">
+                            <Button Style="{StaticResource LayersButton}" Command="{Binding AddLayerCommand}">
                                 <Button.ToolTip>
                                     <ToolTip Background="Black" BorderThickness="0">
                                         <controls:TooltipWithButton Title="Add Layer" ButtonText="Shift" ButtonTextHelper="Clone current layer"/>
@@ -100,7 +132,7 @@
                                 </Button.ToolTip>
                                 <Image Source="./Resources/icons/common/plus.png" Width="10" Height="10"/>
                             </Button>
-                            <Button Style="{StaticResource layersButton}" Grid.Column="1" Command="{Binding MoveLayerUpCommand}" IsEnabled="{Binding CanLayerMoveUp}">
+                            <Button Style="{StaticResource LayersButton}" Grid.Column="1" Command="{Binding MoveLayerUpCommand}" IsEnabled="{Binding CanLayerMoveUp}">
                                 <Button.ToolTip>
                                     <ToolTip Background="Black" BorderThickness="0">
                                         <controls:TooltipWithButton Title="Move layer up" ButtonText="Shift" ButtonTextHelper="Move to the top"/>
@@ -108,7 +140,7 @@
                                 </Button.ToolTip>
                                 <Image Source="./Resources/icons/common/arrow-up.png" Width="10" Height="10"/>
                             </Button>
-                            <Button Style="{StaticResource layersButton}" Grid.Column="2" Command="{Binding MoveLayerDownCommand}" IsEnabled="{Binding CanLayerMoveDown}">
+                            <Button Style="{StaticResource LayersButton}" Grid.Column="2" Command="{Binding MoveLayerDownCommand}" IsEnabled="{Binding CanLayerMoveDown}">
                                 <Button.ToolTip>
                                     <ToolTip Background="Black" BorderThickness="0">
                                         <controls:TooltipWithButton Title="Move layer down" ButtonText="Shift" ButtonTextHelper="Move to the bottom"/>
@@ -116,7 +148,7 @@
                                 </Button.ToolTip>
                                 <Image Source="./Resources/icons/common/arrow-down.png" Width="10" Height="10"/>
                             </Button>
-                            <Button Style="{StaticResource layersButton}" Grid.Column="3" Command="{Binding EditLayerNameCommand}">
+                            <Button Style="{StaticResource LayersButton}" Grid.Column="3" Command="{Binding EditLayerNameCommand}">
                                 <Button.ToolTip>
                                     <ToolTip Background="Black" BorderThickness="0">
                                         <controls:SimpleTooltip Title="Edit layer name"/>
@@ -124,7 +156,7 @@
                                 </Button.ToolTip>
                                 <Image Source="./Resources/icons/common/pencil.png" Width="10" Height="10"/>
                             </Button>
-                            <Button Style="{StaticResource layersButton}" Grid.Column="4" Command="{Binding MergeLayerCommand}" IsEnabled="{Binding CanLayerMerge}">
+                            <Button Style="{StaticResource LayersButton}" Grid.Column="4" Command="{Binding MergeLayerCommand}" IsEnabled="{Binding CanLayerMerge}">
                                 <Button.ToolTip>
                                     <ToolTip Background="Black" BorderThickness="0">
                                         <controls:SimpleTooltip Title="Merge with layer below"/>
@@ -132,7 +164,7 @@
                                 </Button.ToolTip>
                                 <Image Source="./Resources/icons/common/download2.png" Width="10" Height="10"/>
                             </Button>
-                            <Button Style="{StaticResource layersButton}" Grid.Column="5" Command="{Binding RemoveLayerCommand}" IsEnabled="{Binding CanLayerRemove}">
+                            <Button Style="{StaticResource LayersButton}" Grid.Column="5" Command="{Binding RemoveLayerCommand}" IsEnabled="{Binding CanLayerRemove}">
                                 <Button.ToolTip>
                                     <ToolTip Background="Black" BorderThickness="0">
                                         <controls:SimpleTooltip Title="Delete selected layer"/>
